--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@
     box-sizing: border-box;
 }   
 /* Стили для Задания 1 */
-.task1,.task2,.task3{
+.task1,.task2,.task3,.task4{
     text-align: center;
 }
-.main,.main2{
+.main,.main2,.task4,.main4{
     margin: 10px 0 0;
 }
 .main-li,.main-li2,.main-li3{
@@ -17,6 +17,13 @@
     height: 50px;
     display: inline-block;
     line-height: 50px;
+}
+.main-li4{
+    background: #ddcece;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    margin: 0 0 5px 0;
 }
 .main-li>a{
     color: #000000;
@@ -68,4 +75,19 @@ background-color: #5DB7DE;
 }
 .link3::before{
 content: "\2192";
+}
+
+.task4{
+    counter-reset: counter;
+}
+.main-li4{
+    counter-increment: counter;
+}
+/* Настройки блока */
+.main-li4::before{
+    content: counter(counter);
+    width:100px;
+    height: 10  0px;
+    background: rgb(12, 247, 110);  
+    display: block;  
 }
