--- a/Homevork/styles/styles.css
+++ b/Homevork/styles/styles.css
@@ -5,15 +5,16 @@
     list-style: none;
 }
 h2{
+    font-size: 34px;
     text-transform: uppercase;
     font-family: 'Pathway Gothic One', sans-serif;
 }
 .wrapper{
     margin:auto;
-    width: 1024px;
+    width: 1090px;
     height: 1500px;
     background-image: url("../img//content-bg.jpg"); 
-    padding: 100px 70px 100px 76px;
+    padding: 100px 90px 100px 76px;
 }
 .fon{
     background-image: url("../img/page-bg.jpg");
@@ -34,16 +35,18 @@ clear: both;
     display: inline-block;
     width: 206px;
     float: right;
-    margin: 0 -30px 0 0;
+    margin: 0 0 0 15px;
     /* border: 3px solid red; */
     counter-reset: counter;
 }
-.paragraph-one{
-   margin: 0 0 50px 0; 
+/* Отступы для параграфов  Our Principles, testimonial*/
+.mleft-one{
+    margin: 0 0 50px -40px;  
 }
-.paragraph-two{
-    margin: 0 0 70px 0;
+.mleft{
+    margin: 0 0 70px -27px;
 }
+/* End */
 .fleft{
     float: left;
     margin: 0 25px 25px 0;
@@ -84,10 +87,9 @@ clear: both;
     float: left;
 }
 .block-right2{
-    width: 220px;
+    width: 206px;
     /* border: 3px solid red; */
     float: right;
-    margin: 0 -50px 0 0;
 }
 .margin{
     margin: 115px 0 0 0;
@@ -111,6 +113,8 @@ clear: both;
 }
 .arrow::before{
     content: "\2192";
+    margin: 0 20px 0 0;
+    color: #38afe5;
 }
 
 .before::before{
@@ -124,3 +128,4 @@ content: "\201D";
     margin: 30px 0 20px 0; 
     width: 220px;
 }
+
